--- a/styles.css
+++ b/styles.css
@@ -1,60 +1,72 @@
-.container {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
+body {
+  background-color: rgba(239, 237, 237, 0.471);
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-.form1 {
-  color: #00a0c1;
-  padding: 10px;
+.header {
+  font-weight: 800;
   margin: 10px;
 }
-.btn_more, .btn_less {
-  display: none;
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
-.form1, .form2 {
+.form {
   display: flex;
   flex-direction: column;
 }
 
+.f1 {
+  display: none;
+}
+
 .inputNumber {
-  margin: 10px;
+  margin: 3px;
   width: 300px;
   text-align: center;
   color: #00a0c1;
   border: 1px solid #00a0c1;
-  border-radius: 30px;
+  border-radius: 8px;
   font-weight: bold;
   padding: 10px;
   box-sizing: border-box;
+}
+
+.btn:hover {
+  background-color: #00a0c1;
+  color: #fff;
 }
 
 button {
   border: 1px solid #00a0c1;
-  border-radius: 30px;
+  border-radius: 8px;
   font-weight: bold;
   padding: 10px;
-  margin: 10px;
+  margin: 3px;
   color: #00a0c1;
-  background: none;
+  background: rgb(255, 255, 255);
   cursor: pointer;
+  text-align: center;
   width: 300px;
   box-sizing: border-box;
+  -webkit-box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+  -moz-box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+  box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
 }
 
 .selecter {
-  margin: 10px;
+  margin: 3px;
   width: 300px;
   text-align: center;
   border: 1px solid #00a0c1;
-  border-radius: 30px;
+  border-radius: 8px;
   font-weight: bold;
   color: #00a0c1;
   padding: 10px;
   box-sizing: border-box;
+  text-decoration: #00a0c1;
 }
 
 .posts {
@@ -64,13 +76,32 @@ button {
 }
 
 .post {
-  border: 1px solid #00a0c1;
-  border-radius: 30px;
+  border-radius: 8px;
   margin: 5px 0;
   padding: 10px 10px;
-  margin: 15px;
+  margin: 10px;
   color: #00a0c1;
   text-align: center;
-  width: 300px;
-  background-color: #FFF;
+  width: 250px;
+  background-color: #fff;
+  -webkit-box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+  -moz-box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+  box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.image {
+  width: 180px;
+  margin-top: 10px;
+}
+
+.price {
+  font-weight: 800;
+  color: black;
+}
+
+footer {
+  text-align: center;
 }
